# halo2

./: .gitignore  .gitmodules  Cargo.toml  crates.js  help.html  search-index.js  settings.html  src-files.js
halo2/: all.html  index.html
halo2_backend/: Cargo.toml  all.html  index.html
halo2_backend/arithmetic/: fn.parallelize.html  index.html  trait.CurveAffine.html  trait.CurveExt.html  trait.Field.html
halo2_backend/helpers/: enum.SerdeFormat.html  index.html  trait.CurveRead.html  trait.SerdeCurveAffine.html  trait.SerdePrimeField.html
halo2_backend/multicore/: fn.current_num_threads.html  fn.join.html  fn.scope.html  index.html  (+8 more)
halo2_debug/: Cargo.toml  all.html  fn.check_witness.html  fn.keccak_hex.html  fn.test_result.html  fn.test_rng.html  index.html  sidebar-items.js
halo2_frontend/: Cargo.toml  all.html  index.html
halo2_middleware/: Cargo.toml  all.html  index.html
halo2_proofs/: CHANGELOG.md  Cargo.toml  all.html  dhat-heap.json  enum.SerdeFormat.html  index.html
halo2_test_utils/: Cargo.toml
halo2_test_utils/src/: lib.rs
p3_frontend/: Cargo.toml  all.html  enum.Location.html  enum.SymbolicExpression.html  enum.Var.html  fn.check_witness.html  fn.compile_circuit_cs.html  fn.compile_preprocessing.html  fn.get_public_inputs.html  fn.trace_to_wit.html  index.html  sidebar-items.js  struct.CompileParams.html  struct.FWrap.html  struct.PreprocessingInfo.html  struct.Public.html  struct.Query.html  struct.SymbolicAirBuilder.html  struct.SymbolicVariable.html  trait.AirBuilderWithPublicValues.html
scripts/: process_profiling.py
(+689 files in other folders)
